syntax = "proto3";

package pb;
option go_package = "github.com/farkhat/KinoCar";

message Car {
  string id = 1;
  string brand = 2;
  string model = 3;
  int32 year = 4;
  float displacement = 6;
  string body = 7;
  float mpg = 8;
  int32 cylinders = 9;
  float horsepower = 10;
  string brake_system = 11;
  string aspiration = 12;
  float acceleration = 13;
  string country = 14;
}

